@@ -1,21 +1,50 @@
 package com.reserveit;
 
+import com.reserveit.util.JwtAuthFilter;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity
 public class SecurityConfig {
+    private final JwtAuthFilter jwtAuthFilter;
+
+    // Define public endpoints
+    private static final String[] PUBLIC_ENDPOINTS = {
+            "/api/auth/**",
+            "/api/users/register",
+            "/api/users/login",
+            "/v3/api-docs/**",
+            "/swagger-ui/**",
+            "/actuator/health"
+    };
+
+    // Define admin endpoints
+    private static final String[] ADMIN_ENDPOINTS = {
+            "/api/admin/**",
+            "/api/users/**"  // Added to allow admin to manage users
+    };
+
+    public SecurityConfig(JwtAuthFilter jwtAuthFilter) {
+        this.jwtAuthFilter = jwtAuthFilter;
+    }
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
@@ -23,24 +52,33 @@ public class SecurityConfig {
                 .securityMatcher("/**")
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(csrf -> csrf.disable())
-                .authorizeHttpRequests(auth ->
-                        auth
-                                // Companies endpoints
-                                .requestMatchers(HttpMethod.GET, "/api/companies/**").permitAll()
-                                .requestMatchers(HttpMethod.POST, "/api/companies/**").permitAll()
-                                // Reservations endpoints
-                                .requestMatchers(HttpMethod.GET, "/api/reservations/**").permitAll()
-                                .requestMatchers(HttpMethod.POST, "/api/reservations/**").permitAll()
-                                .requestMatchers(HttpMethod.PUT, "/api/reservations/**").permitAll()
-                                .requestMatchers(HttpMethod.DELETE, "/api/reservations/**").permitAll()
-                                // User endpoints
-                                .requestMatchers("/api/users/register").permitAll()
-                                .requestMatchers("/api/users/login").permitAll()
-                                .anyRequest().authenticated()
+                .headers(headers -> headers
+                        .frameOptions().sameOrigin()
+                        .xssProtection().disable()
+                        .contentSecurityPolicy("default-src 'self'")
                 )
-                .sessionManagement(session ->
-                        session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                );
+                .authorizeHttpRequests(auth -> auth
+                        // Public endpoints
+                        .requestMatchers(PUBLIC_ENDPOINTS).permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/companies/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/categories/**").permitAll()
+
+                        // Admin endpoints
+                        .requestMatchers(ADMIN_ENDPOINTS).hasRole("ADMIN")
+
+                        // Customer endpoints
+                        .requestMatchers("/api/reservations/**").hasAnyRole("CUSTOMER", "ADMIN")
+
+                        // Management endpoints
+                        .requestMatchers("/api/management/**").hasAnyRole("MANAGER", "ADMIN")
+
+                        // All other requests need authentication
+                        .anyRequest().authenticated()
+                )
+                .sessionManagement(session -> session
+                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                )
+                .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
@@ -48,13 +86,52 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5200")); // Your frontend origin
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+
+        // Allow multiple frontend origins
+        configuration.setAllowedOrigins(Arrays.asList(
+                "http://localhost:5173",  // Vite default
+                "http://localhost:5200"  // Your configured port
+        ));
+
+        // Allow all common methods
+        configuration.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
+        ));
+
+        // Allow necessary headers
+        configuration.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "X-Requested-With",
+                "Accept",
+                "Origin",
+                "Access-Control-Request-Method",
+                "Access-Control-Request-Headers"
+        ));
+
+        //  headers that might be needed by the frontend
+        configuration.setExposedHeaders(Arrays.asList(
+                "Access-Control-Allow-Origin",
+                "Access-Control-Allow-Credentials",
+                "Authorization"
+        ));
+
         configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
+    }
+
+    @Bean
+    public AuthenticationManager authenticationManager(
+            AuthenticationConfiguration config) throws Exception {
+        return config.getAuthenticationManager();
+    }
+
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder(12);
     }
 }
